<resources>
    <string name="app_name">FlanSleepTimer</string>

    <string name="btn_start">START</string>
    <string name="btn_stop">STOP</string>
    <string name="btn_reset">RESET</string>

    <string name="btn_1hour">+1H</string>
    <string name="btn_30Minute">+30M</string>
    <string name="btn_5Minute">+5M</string>

    <string name="cb_media_stop">Stop music playing</string>
    <string name="cb_media_mute">Mute media sounds</string>
    <string name="cb_blue">Bluetooth disconnect</string>

    <string name="nothing">Please select a function of the timer to perform</string>
    <string name="timeout">The timer has expired</string>
    <string name="leftTime">minute left to timer</string>
    <string name="app_widget_description">Flansleeptimer widget</string>
    <string name="start_app">Start App</string>
    <string name="start_timer">Start Timer</string>
    <string name="app_update">New version availble. Please update app</string>
    <string name="common_update">Update</string>
    <string name="common_cancel">Cancel</string>
    <string name="whitelist_add">Exclude from battery usage optimization list for correct operation</string>
    <string name="common_ok">OK</string>
    <string name="flan">flandre</string>
</resources>
