<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/Widget.SleepTimer.AppWidget.Container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:theme="@style/Theme.AppCompat.NoActionBar.AppWidgetContainer">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="6dp"
        android:gravity="center"
        android:text="@string/app_name"/>

    <Button
        style="@style/Widget.SleepTimer.AppWidget.InnerView"
        android:id="@+id/appwidget_button_app"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:text="@string/start_app"/>

    <Button
        style="@style/Widget.SleepTimer.AppWidget.InnerView"
        android:id="@+id/appwidget_button_timer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/start_timer"/>

</LinearLayout>